--- a/.github/workflows/changerelease.yml
+++ b/.github/workflows/changerelease.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: dropseed/changerelease
+    - uses: dropseed/changerelease@master
