Add GITHUB_TOKEN to action

--- a/.github/workflows/changerelease.yml
+++ b/.github/workflows/changerelease.yml
@@ -12,3 +12,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: dropseed/changerelease@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
