Fix changelog urls and try hardcoded action branch

--- a/.github/workflows/changerelease.yml
+++ b/.github/workflows/changerelease.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
   push:
     paths: [CHANGELOG.md]
-    branches: [$default-branch]
+    branches: [master]
     tags: ["*"]
 
 jobs:
