--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'Path to your CHANGELOG'
     required: false
     default: 'CHANGELOG.md'
+  tag_prefix:
+    description: 'The prefix that is on SemVer tags (i.e. "v" or nothing "")'
+    default: 'v'
   github_token:
     description: "A GitHub token that can create and modify releases"
     required: true
@@ -12,6 +15,6 @@ runs:
   using: docker
   image: Dockerfile
   args:
-    - --changelog ${{ inputs.changelog }}
+    - --changelog ${{ inputs.changelog }} --tag-prefix ${{ inputs.tag_prefix }}
   env:
     GITHUB_TOKEN: ${{ inputs.github_token }}
