Put tag_prefix in quotes for GitHub Action

--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,6 @@ runs:
   using: docker
   image: Dockerfile
   args:
-    - --changelog ${{ inputs.changelog }} --tag-prefix ${{ inputs.tag_prefix }}
+    - --changelog ${{ inputs.changelog }} --tag-prefix '${{ inputs.tag_prefix }}'
   env:
     GITHUB_TOKEN: ${{ inputs.github_token }}
