--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ runs:
   using: docker
   image: Dockerfile
   args:
-    - | --changelog ${{ inputs.changelog }} ${{ inputs.tag_prefix ? "--tag-prefix " + inputs.tag_prefix : "--no-tag-prefix" }}
+    - >
+      --changelog ${{ inputs.changelog }}
+      ${{ inputs.tag_prefix ? "--tag-prefix " + inputs.tag_prefix : "--no-tag-prefix" }}
   env:
     GITHUB_TOKEN: ${{ inputs.github_token }}
