--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,12 @@ changerelease = "changerelease.cli:cli"
 python = "^3.6"
 requests = "^2.24.0"
 click = "^7.1.2"
+docutils = "^0.17.1"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
 black = "^20.8b1"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
