--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ click = "^7.1.2"
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.3"
 black = "^20.8b1"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
