Fix poetry in nextrelease

--- a/.github/workflows/nextrelease.yml
+++ b/.github/workflows/nextrelease.yml
@@ -15,10 +15,12 @@ jobs:
       with:
         fetch-depth: 0  # all branches and tags
     - uses: dropseed/nextrelease@v1
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.DROPSEED_PYPI_TOKEN }}
       with:
         prepare_cmd: |
           sed -i -e "s/version = \"[^\"]*\"/version = \"$VERSION\"/g" pyproject.toml
         publish_cmd: |
-          poetry publish --build
+          pip3 install -U pip poetry && poetry publish --build --no-interaction
           git tag -a v$VERSION_MAJOR -m v$VERSION_MAJOR -f && git push origin v$VERSION_MAJOR -f
         github_token: ${{ secrets.GITHUB_TOKEN }}
